--- a/src/components/Notification/_style.css
+++ b/src/components/Notification/_style.css
@@ -1,3 +1,8 @@
+h3 {
+	margin-bottom: 6px;
+	margin-top: 6px;
+}
+
 .notification-info {
   background-color: #262626;
   padding: 0.5em;
@@ -5,6 +10,8 @@
   margin: 0.5em 0;
   padding-left: 1em;
   padding-right: 1em;
+	text-align: left;
+	width: 100%;
 }
 
 .timestamp {
