--- a/src/components/SwipeSwitch/_style.css
+++ b/src/components/SwipeSwitch/_style.css
@@ -11,6 +11,8 @@
   justify-content: space-between;
   padding-right: 16px;
   transition: background-color 0.35s cubic-bezier(0.2, 0, 0.38, 0.9);
+	user-select: none;
+	min-width: 50%;
 }
 
 .swipe-switch:hover {
